# foo_wave_seekbar

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ActiveData.h  BackingStore.cc  BackingStore.cpp  BackingStore.h  CMakeLists.txt  CMakeSettings.json  Cache.h  CacheImpl.ProcessFile.cc  CacheImpl.cc  CacheImpl.h  Clipboard.cc  Clipboard.h  Direct2D.h  Direct2D1.cc  Direct3D.Effects.h  Direct3D.h  Direct3D10.cc  Direct3D11.cc  Direct3D11.h  Direct3D9.ConfigDialog.cc  Direct3D9.Effects.cc  Direct3D9.Effects.h  Direct3D9.Resources.cc  Direct3D9.Update.cc  Direct3D9.cc  Direct3D9.h  FrontendCallbackImpl.h  FrontendConfigImpl.h  FrontendLoader.cc  FrontendLoader.h  GdiFallback.cc  GdiFallback.h  Helpers.h  InstanceTracker.h  Job.h  MainCache.cc  (+71 more)
foo_wave_seekbar/: BackingStore.cc  BackingStore.h  CMakeLists.txt  Cache.h  CacheImpl.ProcessFile.cc  CacheImpl.cc  CacheImpl.h  Clipboard.cc  Clipboard.h  Direct3D11Frontend.cc  Direct3D11Frontend.h  FrontendCallbackImpl.h  FrontendConfigImpl.h  FrontendLoader.cc  FrontendLoader.h  GdiFallback.cc  GdiFallback.h  Helpers.h  Job.h  MainCache.cc  MainSeekbar.cc  MenuCommands.cc  Pack.cc  Pack.h  PchSeekbar.h  PersistentSettings.cc  PersistentSettings.h  Player.cc  Player.h  ProcessingContext.cc  ProcessingContext.h  SeekCallback.h  SeekTooltip.h  Seekbar frontend.props  SeekbarCui.cc  SeekbarCui.h  SeekbarDui.cc  SeekbarDui.h  SeekbarWindow.Callbacks.cc  SeekbarWindow.ConfigDialog.cc  (+7 more)
foo_wave_seekbar/frontend_direct2d/: CMakeLists.txt  Direct2D.h  Direct2D1.cc  EntrypointD2D.cc
foo_wave_seekbar/frontend_direct3d11/: Direct3D11.ConfigDialog.cc  Direct3D11.Effects.cc  Direct3D11.Effects.h  Direct3D11.Resources.cc  Direct3D11.Update.cc  Direct3D11.cc  Direct3D11.h  EntrypointD3D11.cc  PchDirect3D11.cc  PchDirect3D11.h
foo_wave_seekbar/frontend_direct3d9/: CMakeLists.txt  Direct3D9.ConfigDialog.cc  Direct3D9.Effects.cc  Direct3D9.Effects.h  Direct3D9.Resources.cc  Direct3D9.Update.cc  Direct3D9.cc  Direct3D9.h  EntrypointD3D9.cc  PchDirect3D9.cc  PchDirect3D9.h  Scintilla.h  frontend_direct3d9.vcxproj.filters
foo_wave_seekbar/frontend_sdk/: CMakeLists.txt  FrontendHelpers.h  VisualFrontend.h  frontend_sdk.vcxproj.filters
foo_wave_seekbar/json/: jsoncpp.cpp
foo_wave_seekbar/lzma/: 7z.h  7zAlloc.h  7zBuf.h  7zCrc.h  7zFile.h  Alloc.h  Bcj2.h  Bra.h  CpuArch.h  Delta.h  LzFind.h  LzFindMt.h  LzHash.h  Lzma2Dec.h  Lzma2Enc.h  Lzma86.h  LzmaDec.h  LzmaEnc.h  LzmaLib.h  MtCoder.h  Ppmd.h  Ppmd7.h  Sha256.h  Threads.h  Types.h  Xz.h  XzCrc64.h  XzEnc.h
foo_wave_seekbar/util/: Barrier.h  Filesystem.h
foo_wave_seekbar/waveform_sdk/: CMakeLists.txt  Downmix.h  Optional.h  RefPointer.h  Waveform.cc  Waveform.h  WaveformImpl.cc  WaveformImpl.h  waveform_sdk.vcxproj.filters
foobar2000/: foobar2000.sln
foobar2000/ATLHelpers/: foobar2000_ATL_helpers.vcxproj  foobar2000_ATL_helpers.vcxproj.filters
foobar2000/SDK/: foobar2000_SDK.vcxproj
foobar2000/foo_sample/: foo_sample.rc  foo_sample.sln  foo_sample.vcxproj  foo_sample.vcxproj.filters
foobar2000/foo_wave_seekbar/: CacheImpl.h  FrontendConfigImpl.h  GdiFallback.cc  Job.h  MenuCommands.cc  PchSeekbar.h  PersistentSettings.cc  ProcessingContext.h  SeekTooltip.h  SeekbarCui.h  SeekbarDui.cc  SeekbarDui.h  SeekbarWindow.Callbacks.cc  SeekbarWindow.ConfigDialog.cc  SeekbarWindow.Events.cc  foo_wave_seekbar.rc  foo_wave_seekbar.vcxproj  resource.h  sqlite3.c
foobar2000/foo_wave_seekbar/frontend_direct2d/: Direct2D1.cc  EntrypointD2D.cc
foobar2000/foo_wave_seekbar/frontend_direct3d9/: Direct3D9.Effects.cc  Direct3D9.cc  EntrypointD3D9.cc
foobar2000/foo_wave_seekbar/frontend_sdk/: FrontendHelpers.h  VisualFrontend.h
foobar2000/foo_wave_seekbar/waveform_sdk/: CMakeLists.txt  RefPointer.h  Waveform.h
foobar2000/foobar2000_component_client/: foobar2000_component_client.vcxproj
foobar2000/helpers/: foobar2000_sdk_helpers.vcxproj  foobar2000_sdk_helpers.vcxproj.filters
frontend_direct2d/: CMakeLists.txt  Direct2D.h  Direct2D1.cc  EntrypointD2D.cc  ExtensionEntrypoint.cc  frontend_direct2d.vcxproj  frontend_direct2d.vcxproj.filters
frontend_direct3d9/: CMakeLists.txt  D3D9Editor.cc  Direct3D9.ConfigDialog.cc  Direct3D9.Effects.cc  Direct3D9.Effects.h  Direct3D9.Resources.cc  Direct3D9.Update.cc  Direct3D9.cc  Direct3D9.h  EntrypointD3D9.cc  PchDirect3D9.cc  PchDirect3D9.h  frontend_direct3d9.rc  frontend_direct3d9.vcxproj  frontend_direct3d9.vcxproj.filters  resource.h  seekbar_footer.fx
frontend_direct3d9/editor/: index.html
frontend_sdk/: FrontendHelpers.h  VisualFrontend.h  frontend_sdk.vcxproj
pfc/: pfc.vcxproj
tests/: TestProcessFile.cc  Testing.h
util/: Asio.cc  Asio.h  Barrier.h  Filesystem.h  Profiling.cc  Profiling.h  UvHelpers.h  xpatl.cpp  xpatlwrap.asm
vc14/: columns_ui-sdk.vcxproj
waveform_sdk/: CMakeLists.txt  Downmix.h  Optional.h  RefPointer.h  Waveform.cc  Waveform.h  WaveformImpl.cc  WaveformImpl.h  waveform_sdk.vcxproj  waveform_sdk.vcxproj.filters
wtl/: WTL.props
