set(WAVE_SDK_SOURCES
	"Downmix.h"
	"RefPointer.h"
	"Waveform.cc"
	"Waveform.h"
	"WaveformImpl.cc"
	"WaveformImpl.h"
)
add_library(waveform_sdk STATIC
	${WAVE_SDK_SOURCES}
)
target_link_libraries(waveform_sdk
	PUBLIC
	unofficial::foobar2000-sdk::foobar2000_component_client
	unofficial::foobar2000-sdk::helpers
	unofficial::foobar2000-sdk::pfc
	unofficial::foobar2000-sdk::SDK
	unofficial::foobar2000-sdk::shared
)
